[TF-995] fixed address icon in footer and misalignment (#258)
* fixed address icon in footer and misalignment

* Removed the redudant styling in footer.

* added arbitrary value to align icon with text

--- a/modules/Layout/Boilerplate/Boilerplate.module.scss
+++ b/modules/Layout/Boilerplate/Boilerplate.module.scss
@@ -54,10 +54,13 @@
     @include text-label;
 
     display: flex;
-    align-items: center;
+    align-items: flex-start;
 
     .icon {
         margin-right: $spacing-1;
+        // arbitrary value to align icon to text
+        margin-top: 0.1875rem;
+        flex-shrink: 0;
     }
 }
 
